--- a/src/app/routes/elements/notification/notification.component.html
+++ b/src/app/routes/elements/notification/notification.component.html
@@ -62,6 +62,7 @@
                 <div nz-form-item nz-row>
                     <div nz-form-control nz-col [nzSpan]="18" [nzOffset]="6">
                         <button nz-button (click)="msg_test()">notice-show</button>
+                        <button nz-button (click)="sweet_test()">sweet-show</button>
                         <button nz-button (click)="createMessage()" [nzType]="'primary'">Show</button>
                         <button nz-button (click)="clearMessage()">Clear</button>
                     </div>
