--- a/src/styles.less
+++ b/src/styles.less
@@ -7,9 +7,9 @@
 
 // ng-alain
 @import '~@delon/theme/styles/index';
-@import "./styles/_alain-custom-variables";
 
-@import "./styles/index";
+// define
+@import "./app/layout/styles/index";
 
 // Third Library
 @import '../node_modules/ng2-dnd/bundles/style.css';
