--- a/src/app/layout/passport/passport.component.html
+++ b/src/app/layout/passport/passport.component.html
@@ -2,16 +2,16 @@
     <div class="top">
         <div class="head">
             <a [routerLink]="['/']">
-                <img class="logo" src="./assets/img/logo-color.svg">
-                <span class="title">ng-alain</span>
+                <img class="logo" src="./assets/img/1.png">
+                <span class="title" [innerHTML]='stateService.config.app.title'>ng-alain</span>
             </a>
         </div>
-        <p class="desc">武林中最有影响力的《葵花宝典》；欲练神功，挥刀自宫</p>
+        <p class="desc">最牛逼的是，要成为你自己</p>
     </div>
     <router-outlet></router-outlet>
     <global-footer [links]="links">
         <ng-template #copyright>
-            Copyright <nz-icon nzType="copyright"></nz-icon> 2017 <a href="//github.com/cipchk" target="_blank">卡色</a>出品
+            Copyright <nz-icon nzType="copyright"></nz-icon> 2018
         </ng-template>
     </global-footer>
 </div>
