--- a/src/app/layout/passport/passport/login/login.component.html
+++ b/src/app/layout/passport/passport/login/login.component.html
@@ -4,21 +4,21 @@
             <ng-template #nzTabHeading>账户密码登录</ng-template>
             <nz-alert *ngIf="error" [nzType]="'error'" [nzMessage]="error" [nzShowIcon]="true" class="mb-lg"></nz-alert>
             <div nz-form-item>
-                <div nz-form-control [nzValidateStatus]="userName">
-                    <nz-input formControlName="userName" [nzPlaceHolder]="'admin'" [nzSize]="'large'">
+                <div nz-form-control [nzValidateStatus]="account">
+                    <nz-input formControlName="account" [nzPlaceHolder]="'帐号'" [nzSize]="'large'">
                         <ng-template #prefix>
                             <i class="anticon anticon-user"></i>
                         </ng-template>
                     </nz-input>
-                    <ng-container *ngIf="userName.dirty || userName.touched">
-                        <p nz-form-explain *ngIf="userName.errors?.required">请输入账户名！</p>
-                        <p nz-form-explain *ngIf="userName.errors?.minlength">至少五个字符</p>
+                    <ng-container *ngIf="account.dirty || account.touched">
+                        <p nz-form-explain *ngIf="account.errors?.required">请输入账户名！</p>
+                        <p nz-form-explain *ngIf="account.errors?.minlength">至少五个字符</p>
                     </ng-container>
                 </div>
             </div>
             <div nz-form-item>
                 <div nz-form-control [nzValidateStatus]="password">
-                    <nz-input formControlName="password" [nzPlaceHolder]="'888888'" [nzType]="'password'" [nzSize]="'large'">
+                    <nz-input formControlName="password" [nzPlaceHolder]="'密码'" [nzType]="'password'" [nzSize]="'large'">
                         <ng-template #prefix>
                             <i class="anticon anticon-lock"></i>
                         </ng-template>
@@ -67,9 +67,6 @@
                 <span>自动登录</span>
             </label>
         </div>
-        <div nz-col [nzSpan]="12" class="text-right">
-            <a class="forgot" (click)="msg.error('请找欧阳锋')">忘记密码？</a>
-        </div>
     </div>
     <div nz-form-item>
         <button nz-button [nzType]="'primary'" [nzLoading]="loading" [nzSize]="'large'" class="ant-btn__block">
@@ -77,16 +74,3 @@
         </button>
     </div>
 </form>
-<div class="other">
-    其他登录方式
-    <nz-tooltip [nzTitle]="'in fact Auth0 via window'">
-        <span nz-tooltip class="icon-alipay" (click)="open('auth0', 'window')"></span>
-    </nz-tooltip>
-    <nz-tooltip [nzTitle]="'in fact Github via redirect'">
-        <span nz-tooltip class="icon-taobao" (click)="open('github')"></span>
-    </nz-tooltip>
-    <nz-tooltip [nzTitle]="'真的是微博'">
-        <span nz-tooltip class="icon-weibo" (click)="open('weibo', 'window')"></span>
-    </nz-tooltip>
-    <a class="register" routerLink="/passport/register">注册账户</a>
-</div>
