--- a/src/app/layout/styles/index.less
+++ b/src/app/layout/styles/index.less
@@ -1,3 +1,5 @@
 @import "./_alain-custom-variables";
 
-// 建议所有项目自定义样式放在该文件夹下
+// 侧边栏
+@aside-nav-fs:                      16px;
+@aside-nav-selected-bg:             #fcfcfc;
