--- a/src/app/pages/extras/poi/poi.component.html
+++ b/src/app/pages/extras/poi/poi.component.html
@@ -31,26 +31,30 @@
         </div>
     </div>
 </form>
-<nz-table #nzTable class="simple-table"
+<nz-table #nzTable 
+    class="simple-table"
     [nzAjaxData]="list"
     [nzLoading]="http.loading"
     [nzTotal]="total"
     [(nzPageIndex)]="s.pi"
-    [(nzPageSize)]="s.ps"
+    [(nzPageSize)]="stateService.define.table_page_size"
     (nzPageIndexChange)="load()"
     [nzBordered]="true"
+    [nzIsPagination]="'true'"
     [nzSize]="'middle'">
     <thead nz-thead>
         <tr>
+            <th nz-th [nzWidth]="'40px'">#</th>
             <th nz-th [nzWidth]="'100px'">编号</th>
             <th nz-th>门店名称</th>
             <th nz-th>分店名</th>
-            <th nz-th [nzWidth]="'100px'">状态</th>
+            <th nz-th [nzWidth]="'80px'">状态</th>
             <th nz-th [nzWidth]="'180px'"></th>
         </tr>
     </thead>
     <tbody nz-tbody>
-        <tr nz-tbody-tr *ngFor="let i of nzTable.data">
+        <tr nz-tbody-tr *ngFor="let i of nzTable.data; let idx=index">
+            <td>{{idx + 1}}</td>
             <td>{{i.id}}</td>
             <td>{{i.name}}</td>
             <td>{{i.branch_name}}</td>
