--- a/src/app/theme/layout/default/default.component.html
+++ b/src/app/theme/layout/default/default.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<nz-layout class="wrapper">
     <div class="router-progress-bar" *ngIf="isFetching"></div>
     <app-header class="header"></app-header>
     <app-sidebar class="aside"></app-sidebar>
@@ -6,4 +6,4 @@
         <reuse-tab></reuse-tab>
         <router-outlet></router-outlet>
     </section>
-</div>
+</nz-layout>
