--- a/src/styles.less
+++ b/src/styles.less
@@ -16,3 +16,6 @@
 
 // sweet alert
 @import '../node_modules/sweetalert2/dist/sweetalert2.css';
+
+// jstree
+@import '../node_modules/jstree/dist/themes/default/style.min.css';
